--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "Aquabot",
-    "description": "AQUABOT  - Makes it easy and fun to use Whatsapp.",
-    "logo": "https://i.ibb.co/LhyDWxR/aquabot.jpg",
+    "name": "ANDY BOT V3",
+    "description": "ANDY  - Makes it easy and fun to use Whatsapp.",
+    "logo":",
     "keywords": ["whatsapp", "userbot", "aqua", "WhatsAsena", "bot", "api", "ai"],
     "repository": "https://github.com/iamMagma/ptsp",
     "website":   "https://aquabot.ga/",
